# powersync-native

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  cbindgen.sh  download_core.js  generate_hashes.js
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
examples/: cpp_queries.cpp
examples/egui_todolist/: Cargo.toml
examples/egui_todolist/src/: database.rs  main.rs  ui.rs
libpowersync/: Cargo.toml  build.rs
libpowersync/include/: powersync.h
libpowersync/src/: bindings.h  completion_handle.rs  connector.rs  crud.rs  database.rs  error.rs  executor.rs  helpers.h  lib.rs  logger.rs  powersync.cpp  schema.rs  status.rs  streams.rs
powersync/: Cargo.toml  README.md  build.rs
powersync/src/: env.rs  error.rs  ffi.rs  http.rs  lib.rs
powersync/src/db/: async_support.rs  connection.rs  core_extension.rs  crud.rs  internal.rs  mod.rs  pool.rs  schema.rs  streams.rs  watch.rs
powersync/src/sync/: connector.rs  coordinator.rs  instruction.rs  mod.rs  options.rs  progress.rs  status.rs  stream_priority.rs  streams.rs  upload.rs
powersync/src/sync/download/: actor.rs  http.rs  mod.rs  sync_iteration.rs
powersync/src/util/: bson_split.rs  line_split.rs  mod.rs  raw_listener.rs  shared_future.rs
powersync/tests/: crud_test.rs  database_test.rs  sync_test.rs
powersync_test_utils/: Cargo.toml
powersync_test_utils/src/: lib.rs  mock_sync_service.rs  sync_line.rs
