[package]
name = "egui_todolist"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
eframe = "0.32.3"
env_logger = "0.11.8"
futures-lite = "2.6.1"
http-client = { version = "6.5.3", features = ["curl_client"], default-features = false }
log = "0.4.28"
powersync = { path = "../../powersync", features = ["tokio"] }
rusqlite = { version = "0.37.0", features = ["load_extension", "bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net"] }
